# TandyGame

./: .gitignore  .travis.yml  README.adoc  README.md  build.sh  build_local.sh  floppy_gen.sh  rebuild_all.sh  regenerate_assets.sh  run_game.dosbox_config  run_game.sh  take_screenshot.sh  test.dosbox_config  test.sh
Image2Tandy/: CMakeLists.txt  Image2Tandy.pro  README.md  Tandy16colors.gpl  animation_loader.cpp  animation_loader.h  main.cpp
Png2Tga/: CMakeLists.txt  main.cpp
TextCompiler/: CMakeLists.txt  main.cpp
architecture/: classes.drawio
boot_floppy/: FLOPPY.img  autoexec.bat
images/: Sprite-0002.ase  enemy.ase  enemy.tga  guy.jsn  guy.tga  guy_anim.ase  l01_bg.csv  l01_col.csv  l02_col.csv  level1.json  level1.tmx  level1_GroundLayer.csv  level2.tmx  map.tmx  obj.tsx  obj_layer.tga  summer_flower_way.tga  tiles.ase  tiles.tga  tiles_scaled.ase  tileset.tsx
levels/: 0101.tmx  0101_bg.csv  0101_col.csv  0102.tmx  0102_bg.csv  0102_col.csv  0103.tmx  0103_bg.csv  0201.tmx  0201_bg.csv  0201_col.csv  0202.tmx  0202_bg.csv  0202_col.csv  0203.tmx  0203_bg.csv  0301.tmx  0301_bg.csv  0301_col.csv  0302.tmx  0302_bg.csv  0302_col.csv  0303.tmx  0303_bg.csv  0303_col.csv  0401.tmx  0401_bg.csv  0401_col.csv  0402.tmx  0402_bg.csv  0402_col.csv  0403.tmx  0403_bg.csv  0501.tmx  0501_bg.csv  0501_col.csv  l01.tmx  l03.tmx  l03_bg.csv  l03_col.csv
music/: CELT.RAD
open_watcom_docker/: Dockerfile
readme/: readme.txt
source/: CELT.RAD  Makefile  actor_animation_controller.h  animation.cpp  animation.h  animation_test.cpp  blit.cpp  compiled_sprite.cpp  (+66 more)
(+11 files in other folders)
